# rrisc

./: .gitignore  Arch.md  Makefile  asm.py  cabal.project  float48.py  hsld  isa.py  rrisc_toolchain.py  rtl.v  run_tests.py  runtests.sh  sim.py  sim2.c  terminal.py  testsim.py  toolchain_checks.py
compiler/: MANUAL.md  cabal.project  rcc.cabal  run_tests.sh  spec.md
compiler/app/: Main.hs
compiler/fuzzer/: Main.hs
compiler/fuzzer/Fuzz/: AST.hs  Gen.hs  InvalidGen.hs  NegativeRun.hs  OpMeta.hs  Print.hs  Run.hs  Shrink.hs
compiler/src/RCC/: CliParse.hs  Codegen.hs  Error.hs  Lower.hs  LowerEmitSSA.hs  LowerSSA.hs  LowerToSSA.hs  Mach.hs  OptFramework.hs  OptFrameworkSSA.hs  Optimize.hs  Parser.hs  Pass.hs  Pipeline.hs  RuntimeDeps.hs  Sema.hs  Syntax.hs  TAC.hs  Target.hs
compiler/src/RCC/Frontend/C/: Compile.hs  FloatWords.hs  Layout.hs  LowerEmitSSA.hs  LowerSSA.hs  LowerToSSA.hs  Parser.hs  Sema.hs  Syntax.hs
compiler/src/RCC/SSA/: CFG.hs  Dom.hs  IR.hs  Optimize.hs  Prog.hs  ToTAC.hs  ToTACProg.hs  Verify.hs
compiler/test/: Main.hs
compiler/tests/: 0010-return-const.c  0010-return-const.output.expect  0010-return-const.output.expect.O0  0010-return-const.s.expect  0010-return-const.s.expect.O0  0010-return-const.s.expect.Os  0020-arithmetic.c  0020-arithmetic.output.expect  0020-arithmetic.output.expect.O0  0020-arithmetic.s.expect  0020-arithmetic.s.expect.O0  0020-arithmetic.s.expect.Os  0030-if.c  0030-if.output.expect  0030-if.output.expect.O0  0030-if.s.expect  0030-if.s.expect.O0  0030-if.s.expect.Os  0040-while.c  0040-while.output.expect  0040-while.output.expect.O0  0040-while.s.expect  0040-while.s.expect.O0  0040-while.s.expect.O1  0050-function.c  0050-function.output.expect  0050-function.output.expect.O0  0050-function.s.expect  0050-function.s.expect.O0  0050-function.s.expect.Os  0060-ptr.c  0060-ptr.output.expect  0060-ptr.output.expect.O0  0060-ptr.s.expect  0060-ptr.s.expect.O0  0060-ptr.s.expect.Os  0070-array.c  0070-array.output.expect  0070-array.output.expect.O0  0070-array.s.expect  (+2643 more)
compiler/tests/fuzz-fail-negative/: case_000015.negative.c  case_000066.negative.c  case_000072.negative.c  case_000137.negative.c  case_000149.negative.c  case_000171.negative.c  case_000213.negative.c  case_000289.negative.c  case_000322.negative.c  case_000360.negative.c  case_000444.negative.c  case_000498.negative.c
compiler/tests/io/: README.md  echo-line.c  io-collatz-lens.c  io-collatz-lens.stdout.expect  io-echo-empty.c  io-gcd-table.c  io-gcd-table.stdout.expect  io-gets-twoline.c  io-isqrt-scan.c  io-isqrt-scan.stdout.expect  io-itoa-edges.c  io-itoa-edges.stdout.expect  io-mixed-puts-putchar.c  io-mixed-puts-putchar.stdout.expect  io-powmod-demo.c  io-powmod-demo.stdout.expect  io-putchar-run.c  io_include.h  matrix-print.c  matrix-print.s  matrix-print.stdout.expect  print-mul.c  print-sum.c
demos/: Makefile  mandelbrot.c  print_float.c  rpn.c  rpn.s  rpn_float.c  rpn_int.c  rpn_ssaonly.s  test_forth.sh  test_rpn.sh
docs/: toolchain.md
examples/: Makefile  ascii.s  echo.s  fib-recursive.s  fib.s  hello.s  print_dec.s  print_oct.s  stack.lib  stack.s
forth/: Makefile  core.s  dict.s  forth.s  io.s  main.s  primitives.s  test_forth.sh
hsasm/: hsasm.cabal
hsasm/app/: Main.hs
hsasm/src/RRISC/: Asm.hs  Float48.hs  ISA.hs  SixBit.hs
hsasm/src/RRISC/Asm/: Expr.hs  Preprocess.hs
hstools/: hstools.cabal
hstools/app/: HsldMain.hs  Main.hs  SimMain.hs
hstools/src/RRISC/: Asm.hs  Disasm.hs  Link.hs  SixBit.hs
hstools/src/RRISC/Asm/: Encode.hs  Layout.hs  Preprocess.hs  Types.hs
hstools/src/RRISC/Sim/: Bus.hs  Memory.hs  Terminal.hs
hstools/test-haskell/: Main.hs
hstools/tests/: hsld_equivalence.py  obj_roundtrip.py
lib/: README.md  __mul.s  crt0.s  itoa.s  librcc.s  rlibc.h  rlibc_float_calc.h  rlibc_host.h  rlibc_io.h  rlmath.c  rlmath.h  rpn_err.s
pytools/: __init__.py  asm.py  asm_obj_emit.py  link_core.py  objfmt.py  pyld.py  pyras.py  pyrsim.py  rras.py  rrld.py  rrsim.py  sim.py  sixbit.py  terminal.py  testsim.py
scripts/: build-rrisc-float-objs.sh  rrisc_obj_size.py
tests/: 0010-sum.bin.expect  0010-sum.s  0020-fib.bin.expect  0020-fib.s  0050-branch-wide.bin.expect  0050-branch-wide.output.expect  0050-branch-wide.s  0100-rolror.output.expect  0200-luiaddi.bin.expect  0200-luiaddi.flags  0200-luiaddi.output.expect  0200-luiaddi.s  0300-literals.s  0400-expr.bin.expect  0500-hello.bin.expect  0500-hello.output.expect  0500-hello.s  0510-sixbit-semi.bin.expect  0600-lw-sw.bin.expect  0600-lw-sw.output.expect  0600-lw-sw.s  0601-lwr-swr.bin.expect  0602-base-r7.bin.expect  0602-base-r7.output.expect  0602-base-r7.s  0603-base-reg.bin.expect  0603-base-reg.output.expect  0603-base-reg.s  (+101 more)
tools/: rrisc-tools.cabal
tools/app/: Main.hs  RldMain.hs  SimMain.hs
tools/src/RRISC/: Asm.hs  Disasm.hs  Float48.hs  Link.hs  SixBit.hs
tools/src/RRISC/Asm/: Encode.hs  Layout.hs
tools/src/RRISC/Sim/: Bus.hs  CPU.hs  Memory.hs  Terminal.hs
tools/test-haskell/: Main.hs
tools/tests/: obj_roundtrip.py  rld_equivalence.py
tools/tests/asm/: 0010-sum.output.expect  0020-fib.bin.expect  0020-fib.output.expect  0020-fib.s  0100-rolror.bin.expect  0100-rolror.s  0200-luiaddi.bin.expect  0300-literals.bin.expect  0300-literals.output.expect  0300-literals.s  0400-expr.output.expect  0400-expr.s  0500-hello.flags  0500-hello.s  0510-sixbit-semi.output.expect  0510-sixbit-semi.s  0601-lwr-swr.output.expect  0601-lwr-swr.s  0700-include.bin.expect  0700-include.s  0800-jalr.bin.expect  0800-jalr.output.expect  0800-jalr.s  0900-macro.s  0910-macro-include.bin.expect  1010-fill-align.bin.expect  1010-fill-align.s  1020-str.output.expect  1020-str.s  1020-unicode.s  1100-radix-modes.output.expect  1100-radix-modes.s  1201-ifdef-false.s  1202-ifeq-true.bin.expect  1202-ifeq-true.s  1203-ifeq-false.output.expect  1204-ifneq.s  err-addi-r0.err.expect  err-addi-r0.s  err-addi-r7.err.expect  (+67 more)
tools/tests/float/: fuzz_float_routines.py  run_float_tests.py
tools/tests/librcc/: run_librcc_tests.py
tools/tests/toolchain/: 0001-halt.s
(+40 files in other folders)
