cabal-version:      3.0
name:               rcc
version:            0.1.0.0
synopsis:           C-like compiler for the RRISC 12-bit word machine
build-type:         Simple

common rcc-common
    default-language:   GHC2021
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Wno-unused-do-bind
    build-depends:
          base       >= 4.18 && < 5
        , text       >= 2.0  && < 3
        , megaparsec >= 9.0  && < 10
        , containers >= 0.6  && < 1
        , mtl        >= 2.3  && < 3
        , process    >= 1.6  && < 2
        , filepath   >= 1.4  && < 2

library
    import:          rcc-common
    hs-source-dirs:  src
    exposed-modules:
        RCC.Error
        RCC.CliParse
        RCC.Pass
        RCC.Pipeline
        RCC.OptFramework
        RCC.Syntax
        RCC.Parser
        RCC.Sema
        RCC.TAC
        RCC.LowerToSSA
        RCC.LowerEmitSSA
        RCC.LowerSSA
        RCC.SSA.IR
        RCC.SSA.Verify
        RCC.SSA.CFG
        RCC.SSA.Dom
        RCC.SSA.Prog
        RCC.SSA.ToTAC
        RCC.SSA.ToTACProg
        RCC.SSA.Optimize
        RCC.OptFrameworkSSA
        RCC.Codegen
        RCC.Mach
    other-modules:
        RCC.RuntimeDeps

executable rcc
    import:          rcc-common
    hs-source-dirs:  app
    main-is:         Main.hs
    other-modules:   Paths_rcc
    autogen-modules: Paths_rcc
    build-depends:   rcc

executable rcc-fuzz
    import:          rcc-common
    hs-source-dirs:  fuzzer
    main-is:         Main.hs
    other-modules:
        Fuzz.AST
        Fuzz.OpMeta
        Fuzz.Gen
        Fuzz.InvalidGen
        Fuzz.Print
        Fuzz.Run
        Fuzz.NegativeRun
        Fuzz.Shrink
    build-depends:
          rcc
        , bytestring >= 0.11 && < 0.13
        , directory  >= 1.3  && < 2
        , filepath   >= 1.4  && < 2
        , process    >= 1.6  && < 2
        , random     >= 1.2  && < 1.4
        , async      >= 2.2  && < 2.3
        , stm        >= 2.5  && < 2.6

test-suite rcc-test
    import:          rcc-common
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Main.hs
    build-depends:
          rcc
        , base
        , tasty       >= 1.4  && < 1.6
        , tasty-hunit >= 0.10 && < 0.11
