cabal-version:      3.4
name:               rcc
version:            0.1.0.0
synopsis:           C-like compiler for the RRISC 12-bit word machine
build-type:         Simple

common rcc-common
    default-language:   GHC2021
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Wno-unused-do-bind
    build-depends:
          base       >= 4.18 && < 5
        , text       >= 2.0  && < 3
        , megaparsec >= 9.0  && < 10
        , containers >= 0.6  && < 1
        , mtl        >= 2.3  && < 3
        , process    >= 1.6  && < 2
        , filepath   >= 1.4  && < 2

library
    import:             rcc-common
    hs-source-dirs:     src
    build-depends:      rcc-ir == 0.1.*
    reexported-modules:
        RCC.Ir.TAC,
        RCC.Ir.DataLayout,
        RCC.Ir.Types,
        RCC.Ir.SSA.IR,
        RCC.Ir.SSA.Verify,
        RCC.Ir.SSA.CFG,
        RCC.Ir.SSA.Dom,
        RCC.Ir.SSA.Prog,
        RCC.Ir.SSA.ToTAC,
        RCC.Ir.SSA.ToTACProg,
        RCC.Ir.SSA.Optimize
    exposed-modules:
        RCC.Error
        RCC.CliParse
        RCC.Pass
        RCC.Pipeline
        RCC.OptFramework
        RCC.OptFrameworkSSA
        RCC.Frontend.C.Syntax
        RCC.Frontend.C.Parser
        RCC.Frontend.C.Sema
        RCC.Frontend.C.Layout
        RCC.Frontend.C.FloatWords
        RCC.Frontend.C.LowerToSSA
        RCC.Frontend.C.LowerEmitSSA
        RCC.Frontend.C.LowerSSA
        RCC.Frontend.C.Compile
        RCC.Target
        RCC.Target.Rrisc.Mach
        RCC.Target.Rrisc.Codegen
        RCC.Target.Rrisc.RuntimeDeps

executable rcc
    import:          rcc-common
    hs-source-dirs:  app
    main-is:         Main.hs
    other-modules:   Paths_rcc
    autogen-modules: Paths_rcc
    build-depends:   rcc

executable rcc-fuzz
    import:          rcc-common
    hs-source-dirs:  fuzzer
    main-is:         Main.hs
    other-modules:
        Fuzz.AST
        Fuzz.OpMeta
        Fuzz.Gen
        Fuzz.InvalidGen
        Fuzz.Print
        Fuzz.Run
        Fuzz.NegativeRun
        Fuzz.Shrink
    build-depends:
          rcc
        , bytestring >= 0.11 && < 0.13
        , directory  >= 1.3  && < 2
        , filepath   >= 1.4  && < 2
        , process    >= 1.6  && < 2
        , random     >= 1.2  && < 1.4
        , async      >= 2.2  && < 2.3
        , stm        >= 2.5  && < 2.6

test-suite rcc-test
    import:          rcc-common
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Main.hs
    build-depends:
          rcc
        , base
        , tasty       >= 1.4  && < 1.6
        , tasty-hunit >= 0.10 && < 0.11
