cabal-version:      3.0
name:               hstools
version:            0.1.0.0
synopsis:           RRISC assembler and simulator (Haskell tools)
license:            MIT
author:             rrisc
build-type:         Simple

library
  exposed-modules:
    RRISC.Asm
    RRISC.ISA
    RRISC.Float48
    RRISC.SixBit
    RRISC.Disasm
    RRISC.Sim.Bus
    RRISC.Sim.Memory
    RRISC.Sim.CPU
    RRISC.Sim.Terminal
  other-modules:
    RRISC.Asm.Types
    RRISC.Asm.Expr
    RRISC.Asm.Preprocess
    RRISC.Asm.Layout
    RRISC.Asm.Encode
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    containers,
    stm,
    directory,
    filepath,
    random,
    text,
    vector


executable hsasm
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:
    base >= 4.16 && < 5,
    directory,
    filepath,
    hstools,
    text


executable hsim
  main-is:          SimMain.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat -threaded
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    hstools,
    optparse-applicative >= 0.17 && < 0.19,
    random,
    unix
