cabal-version:      3.0
name:               hstools
version:            0.1.0.0
synopsis:           RRISC assembler and simulator (Haskell tools)
license:            MIT
author:             rrisc
build-type:         Simple

library
  exposed-modules:
    RRISC.Asm
    RRISC.ISA
    RRISC.Float48
    RRISC.SixBit
    RRISC.Disasm
    RRISC.Obj.Format
    RRISC.Obj.Emit
    RRISC.Link
    RRISC.Sim.Bus
    RRISC.Sim.Memory
    RRISC.Sim.CPU
    RRISC.Sim.Terminal
  other-modules:
    RRISC.Asm.Types
    RRISC.Asm.Expr
    RRISC.Asm.Preprocess
    RRISC.Asm.Layout
    RRISC.Asm.Encode
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    containers,
    stm,
    directory,
    filepath,
    random,
    text,
    vector


executable hsasm
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  other-modules:    Paths_hstools
  autogen-modules:  Paths_hstools
  build-depends:
    base >= 4.16 && < 5,
    containers,
    directory,
    filepath,
    hstools,
    text


executable hsld
  main-is:          HsldMain.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  other-modules:    Paths_hstools
  autogen-modules:  Paths_hstools
  build-depends:
    base >= 4.16 && < 5,
    filepath,
    hstools,
    text


executable rsim
  main-is:          SimMain.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat -threaded
  other-modules:    Paths_hstools
  autogen-modules:  Paths_hstools
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    hstools,
    optparse-applicative >= 0.17 && < 0.19,
    random,
    unix


test-suite hstools-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test-haskell
  main-is:          Main.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:
    base >= 4.16 && < 5,
    hstools,
    tasty       >= 1.4  && < 1.6,
    tasty-hunit >= 0.10 && < 0.11,
    text
