cabal-version:      3.0
name:               rrisc-tools
version:            0.1.0.0
synopsis:           RRISC assembler, linker, and simulator
license:            MIT
author:             rrisc
build-type:         Simple

library
  exposed-modules:
    RRISC.Asm
    RRISC.ISA
    RRISC.Float48
    RRISC.SixBit
    RRISC.Disasm
    RRISC.Obj.Format
    RRISC.Obj.Emit
    RRISC.Link
    RRISC.Sim.Bus
    RRISC.Sim.Memory
    RRISC.Sim.CPU
    RRISC.Sim.Terminal
  other-modules:
    RRISC.Asm.Types
    RRISC.Asm.Expr
    RRISC.Asm.Preprocess
    RRISC.Asm.Layout
    RRISC.Asm.Encode
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    containers,
    stm,
    directory,
    filepath,
    random,
    text,
    vector

  if !os(windows)
    build-depends: unix >= 2.8 && < 2.10


executable ras
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  other-modules:    Paths_rrisc_tools
  autogen-modules:  Paths_rrisc_tools
  build-depends:
    base >= 4.16 && < 5,
    containers,
    directory,
    filepath,
    rrisc-tools,
    text


executable rld
  main-is:          RldMain.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  other-modules:    Paths_rrisc_tools
  autogen-modules:  Paths_rrisc_tools
  build-depends:
    base >= 4.16 && < 5,
    filepath,
    rrisc-tools,
    text


executable rsim
  main-is:          SimMain.hs
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat -threaded
  other-modules:    Paths_rrisc_tools
  autogen-modules:  Paths_rrisc_tools
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    rrisc-tools,
    optparse-applicative >= 0.17 && < 0.19,
    random,
    unix


test-suite rrisc-tools-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test-haskell
  main-is:          Main.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat
  build-depends:
    base >= 4.16 && < 5,
    rrisc-tools,
    tasty       >= 1.4  && < 1.6,
    tasty-hunit >= 0.10 && < 0.11,
    text
